--- a/index.html
+++ b/index.html
@@ -18,114 +18,114 @@
     <section>This is going to be a navigation toolbar</section>
 
     <section class="img-bcg text-center">
-        <div class="container container--narrow">
+        <div class="container container--narrow light-font-color">
             <h1>SPECIAL COFFEE ROASTERY</h1>
             <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nostrum, quis! Molestiae, sed?</p>
             <button class="accent-btn top-margin-15">SHOP NOW</button>
         </div>
     </section>
 
-    <section>
-        <div>
-            <div>
-                <img class="coffee-icon" src="/img/coffee_icon.png" alt="coffee mug icon">
+    <section class="gray-bcg">
+        <div class="container">
+            <div class="coffee-icon-container">
+                <img class="coffee-icon bottom-margin-15" src="/img/coffee_icon.png" alt="coffee mug icon">
                 <h3>HOW IT WORKS</h3>
             </div>
-            <div>
+            <div class="container split">
                 <div>
-                    <img src="" alt="raw coffee beans">
+                    <img class="circular--square" src="/img/raw-coffee.jpg" alt="raw coffee beans">
                 </div>
                 <div>
                     <h4>1. Sourcing</h4>
                 </div>
-                <div>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt ex inventore officia
+                <div class="text-center">
+                    <p class="bottom-margin-15">Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt ex inventore officia
                         voluptatibus
                         perspiciatis amet odit soluta quo nemo vel quasi omnis sapiente ad, suscipit aspernatur aliquid
                         dignissimos voluptatum distinctio.</p>
                 </div>
 
                 <div>
-                    <img src="" alt="roasted coffee beans">
+                    <img class="circular--square" src="/img/roasted-coffee.jpg" alt="roasted coffee beans">
                 </div>
                 <div>
                     <h4>2. Roasting</h4>
                 </div>
-                <div>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt ex inventore officia
+                <div  class="text-center">
+                    <p class="bottom-margin-15">Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt ex inventore officia
                         voluptatibus
                         perspiciatis amet odit soluta quo nemo vel quasi omnis sapiente ad, suscipit aspernatur aliquid
                         dignissimos voluptatum distinctio.</p>
                 </div>
 
                 <div>
-                    <img src="" alt="coffee">
+                    <img class="circular--square" src="/img/coffee-mug.jpg" alt="coffee">
                 </div>
                 <div>
                     <h4>3. Delivering</h4>
                 </div>
-                <div>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt ex inventore officia
+                <div  class="text-center">
+                    <p class="bottom-margin-15">Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt ex inventore officia
                         voluptatibus
                         perspiciatis amet odit soluta quo nemo vel quasi omnis sapiente ad, suscipit aspernatur aliquid
                         dignissimos voluptatum distinctio.</p>
                 </div>
 
                 <div>
-                    <button>LEARN MORE</button>
+                    <button class="accent-btn top-margin-15 bottom-margin-25">LEARN MORE</button>
                 </div>
             </div>
         </div>
     </section>
 
-    <section>
-        <div>
+    <section class="top-margin-25">
+        <div class="container text-center">
             <div>
                 <div>
                     <div>
-                        <img src="" alt="">
+                        <img class="icons" src="/img/coffee-bag.svg" alt="coffee bag">
                     </div>
                     <div>
                         <h3>Shop Coffee</h3>
                     </div>
                     <div>
-                        <button>SHOP NOW</button>
+                        <button class="accent-btn top-margin-15 bottom-margin-25">SHOP NOW</button>
                     </div>
                 </div>
 
                 <div>
                     <div>
-                        <img src="" alt="">
+                        <img class="icons" src="/img/coffee-machine.svg" alt="coffee machine">
                     </div>
                     <div>
                         <h3>Shop Equipment</h3>
                     </div>
                     <div>
-                        <button>SHOP NOW</button>
+                        <button class="accent-btn top-margin-15 bottom-margin-25">SHOP NOW</button>
                     </div>
                 </div>
 
                 <div>
                     <div>
-                        <img src="" alt="">
+                        <img class="icons" src="/img/coffee-mugs.svg" alt="coffee mugs">
                     </div>
                     <div>
                         <h3>Shop Merchandise</h3>
                     </div>
                     <div>
-                        <button>SHOP NOW</button>
+                        <button class="accent-btn top-margin-15 bottom-margin-25">SHOP NOW</button>
                     </div>
                 </div>
             </div>
         </div>
     </section>
 
-    <section>
-        <div>
+    <section class="container text-center">
+        <div class="bottom-margin-25">
             <div>
             </div>
 
-            <div>
+            <div  class="bottom-margin-15">
                 <h1>COFFEE SUBSCRIPTION</h1>
             </div>
 
@@ -136,7 +136,7 @@
             </div>
 
             <div>
-                <button>SUBSCRIBE</button>
+                <button class="accent-btn top-margin-15">SUBSCRIBE</button>
             </div>
         </div>
     </section>
