first section fully responsive

--- a/index.html
+++ b/index.html
@@ -32,48 +32,61 @@
                 <h3>HOW IT WORKS</h3>
             </div>
             <div class="container split">
-                <div>
-                    <img class="circular--square" src="/img/raw-coffee.jpg" alt="raw coffee beans">
-                </div>
-                <div>
-                    <h4>1. Sourcing</h4>
-                </div>
-                <div class="text-center">
-                    <p class="bottom-margin-15">Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt ex inventore officia
-                        voluptatibus
-                        perspiciatis amet odit soluta quo nemo vel quasi omnis sapiente ad, suscipit aspernatur aliquid
-                        dignissimos voluptatum distinctio.</p>
-                </div>
-
-                <div>
-                    <img class="circular--square" src="/img/roasted-coffee.jpg" alt="roasted coffee beans">
-                </div>
-                <div>
-                    <h4>2. Roasting</h4>
-                </div>
-                <div  class="text-center">
-                    <p class="bottom-margin-15">Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt ex inventore officia
-                        voluptatibus
-                        perspiciatis amet odit soluta quo nemo vel quasi omnis sapiente ad, suscipit aspernatur aliquid
-                        dignissimos voluptatum distinctio.</p>
+                <div class="center-content">
+                    <div>
+                        <img class="circular--square" src="/img/raw-coffee.jpg" alt="raw coffee beans">
+                    </div>
+                    <div>
+                        <h4>1. Sourcing</h4>
+                    </div>
+                    <div class="text-center">
+                        <p class="bottom-margin-15">Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt ex
+                            inventore officia
+                            voluptatibus
+                            perspiciatis amet odit soluta quo nemo vel quasi omnis sapiente ad, suscipit aspernatur
+                            aliquid
+                            dignissimos voluptatum distinctio.</p>
+                    </div>
                 </div>
 
-                <div>
-                    <img class="circular--square" src="/img/coffee-mug.jpg" alt="coffee">
-                </div>
-                <div>
-                    <h4>3. Delivering</h4>
-                </div>
-                <div  class="text-center">
-                    <p class="bottom-margin-15">Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt ex inventore officia
-                        voluptatibus
-                        perspiciatis amet odit soluta quo nemo vel quasi omnis sapiente ad, suscipit aspernatur aliquid
-                        dignissimos voluptatum distinctio.</p>
+                <div class="center-content">
+                    <div>
+                        <img class="circular--square" src="/img/roasted-coffee.jpg" alt="roasted coffee beans">
+                    </div>
+                    <div>
+                        <h4>2. Roasting</h4>
+                    </div>
+                    <div class="text-center">
+                        <p class="bottom-margin-15">Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt ex
+                            inventore officia
+                            voluptatibus
+                            perspiciatis amet odit soluta quo nemo vel quasi omnis sapiente ad, suscipit aspernatur
+                            aliquid
+                            dignissimos voluptatum distinctio.</p>
+                    </div>
                 </div>
 
-                <div>
-                    <button class="accent-btn top-margin-15 bottom-margin-25">LEARN MORE</button>
+                <div class="center-content">
+                    <div>
+                        <img class="circular--square" src="/img/coffee-mug.jpg" alt="coffee">
+                    </div>
+                    <div>
+                        <h4>3. Delivering</h4>
+                    </div>
+                    <div class="text-center">
+                        <p class="bottom-margin-15">Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt ex
+                            inventore officia
+                            voluptatibus
+                            perspiciatis amet odit soluta quo nemo vel quasi omnis sapiente ad, suscipit aspernatur
+                            aliquid
+                            dignissimos voluptatum distinctio.</p>
+                    </div>
                 </div>
+
+            </div>
+
+            <div class="center-content">
+                <button class="accent-btn top-margin-15 bottom-margin-25">LEARN MORE</button>
             </div>
         </div>
     </section>
@@ -125,7 +138,7 @@
             <div>
             </div>
 
-            <div  class="bottom-margin-15">
+            <div class="bottom-margin-15">
                 <h1>COFFEE SUBSCRIPTION</h1>
             </div>
 
