--- a/index.html
+++ b/index.html
@@ -25,7 +25,9 @@
         </div>
     </section>
 
+
     <section class="gray-bcg">
+        <div class="branch-overlay">
         <div class="container">
             <div class="coffee-icon-container">
                 <img class="coffee-icon bottom-margin-15" src="/img/coffee_icon.png" alt="coffee mug icon">
@@ -89,12 +91,15 @@
                 <button class="accent-btn top-margin-15 bottom-margin-25">LEARN MORE</button>
             </div>
         </div>
+    </div>
     </section>
 
+
     <section class="top-margin-25">
+        <div class="beans-overlay">
         <div class="container text-center">
-            <div>
-                <div>
+            <div class="space-evenly split bottom-margin-25">
+                <div class="bottom-margin-15">
                     <div>
                         <img class="icons" src="/img/coffee-bag.svg" alt="coffee bag">
                     </div>
@@ -106,7 +111,7 @@
                     </div>
                 </div>
 
-                <div>
+                <div class="bottom-margin-15">
                     <div>
                         <img class="icons" src="/img/coffee-machine.svg" alt="coffee machine">
                     </div>
@@ -118,7 +123,7 @@
                     </div>
                 </div>
 
-                <div>
+                <div class="bottom-margin-15">
                     <div>
                         <img class="icons" src="/img/coffee-mugs.svg" alt="coffee mugs">
                     </div>
@@ -131,14 +136,15 @@
                 </div>
             </div>
         </div>
+    </div>
     </section>
 
-    <section class="container text-center">
-        <div class="bottom-margin-25">
-            <div>
-            </div>
-
+    <section class="text-center subs-container center-content spilled-beans-overlay">
+        <div class="">
+        <div class="bottom-margin-25 container">
+            <div class="left-right-padding-80">
             <div class="bottom-margin-15">
+                <img class="coffee-icon bottom-margin-15" src="/img/coffee_icon.png" alt="coffee mug icon">
                 <h1>COFFEE SUBSCRIPTION</h1>
             </div>
 
@@ -152,6 +158,8 @@
                 <button class="accent-btn top-margin-15">SUBSCRIBE</button>
             </div>
         </div>
+        </div>
+    </div>
     </section>
 
     <footer></footer>
